--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 thop==0.1.1.post2209072238
 threadpoolctl==3.1.0
-torch==1.12.1 --no-chache-dir
+torch==1.12.1 --no-cache-dir
 torchvision==0.13.1
 tqdm==4.64.1
 traitlets==5.3.0
